fix menu color on small screen (.toggled-on)

--- a/style.scss
+++ b/style.scss
@@ -3259,7 +3259,7 @@ h3.wpfc_grid_title a {
 	.toggled-on .nav-menu li:hover > a,
 	.toggled-on .nav-menu .children a {
 		background-color: transparent;
-		color: $text-color;
+		color: $white;
 	}
 
 	.toggled-on .nav-menu li a:hover,
